[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
yew-router = "0.18.0"
gloo-events = "0.2.0"
web-sys = { version = "0.3.77", features =["BroadcastChannel"] }
serde-wasm-bindgen = "0.6.5"
gloo-timers = "0.3.0"
wasm-bindgen = "0.2.97"
gloo-utils = "0.2.0"
serde = { version = "1.0.210", features = ["derive"] }
console_log = "1.0.0"
log = "0.4.25"
thiserror = "2.0.11"
